Feature: Add link in jan.1

--- a/prompts/jan.1/src/index.html
+++ b/prompts/jan.1/src/index.html
@@ -17,7 +17,7 @@
 </body>
 
 <span id="title">GENUARY 2021 - JAN.1</span>
-<!-- <a id="next" href="/genuary2021/prompts/jan.2/dist">NEXT</a> -->
+<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.2/dist">NEXT</a>
 <div id="note">
   Inspired by
   <a href="https://www.reddit.com/r/generative/comments/et981y/how_to_generate_a_wavy_pattern/" target="__blank">
