--- a/prompts/jan.4/src/index.html
+++ b/prompts/jan.4/src/index.html
@@ -20,16 +20,15 @@
   <link href="../../../styles.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
   <script src="./main.js" async defer></script>
-  <title>jan.3 - GENUARY 2021</title>
+  <title>jan.4 - GENUARY 2021</title>
 </head>
 
 <body>
 </body>
 
-<span id="title">GENUARY 2021 - JAN.3</span>
-<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.2/dist">PREVIOUS</a>
-<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.4/dist">NEXT</a>
-<span id="note">Inspired by <a href="https://youtu.be/ZS4Bpr2BgnE" target="__blank">Sun Yuan and Peng Yu's "Can't Help Myself"</a></span>
+<span id="title">GENUARY 2021 - JAN.4</span>
+<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.3/dist">PREVIOUS</a>
+<!-- <a id="next" href="#">NEXT</a> -->
 <div id="overlay"></div>
 
 </html>
