Feature: jan.6/jan.7 GA

--- a/prompts/jan.6/src/index.html
+++ b/prompts/jan.6/src/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNK4J51MVY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-FNK4J51MVY');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,8 +27,8 @@
 </body>
 
 <span id="title">GENUARY 2021 - JAN.6</span>
-<!-- <a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.x/dist">PREVIOUS</a>
-<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.x/dist">NEXT</a> -->
+<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.5/dist">PREVIOUS</a>
+<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.7/dist">NEXT</a>
 <div id="overlay"></div>
 <div id="note"></div>
 </html>
