Feature (jan.7): Add note

--- a/prompts/jan.7/src/index.html
+++ b/prompts/jan.7/src/index.html
@@ -29,6 +29,8 @@
 <span id="title">GENUARY 2021 - JAN.7</span>
 <a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.6/dist">PREVIOUS</a>
 <a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.8/dist">NEXT</a>
+<span id="note">Multiplication circle. Modulus: 200, multiplier (which was randomly selected by a computer): 132</span>
+
 <div id="overlay"></div>
 
 </html>
