--- a/prompts/jan.8/src/index.html
+++ b/prompts/jan.8/src/index.html
@@ -28,7 +28,7 @@
 
 <span id="title">GENUARY 2021 - JAN.8</span>
 <a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.7/dist">PREVIOUS</a>
-<!-- <a id="next" href="#">NEXT</a> -->
+<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.9/dist">NEXT</a>
 <div id="overlay"></div>
 
 </html>
