--- a/prompts/jan.11/src/index.html
+++ b/prompts/jan.11/src/index.html
@@ -28,8 +28,8 @@
 
 <span id="title">GENUARY 2021 - JAN.11</span>
 <a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.10/dist">PREVIOUS</a>
-<!-- <a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.12/dist">NEXT</a> -->
+<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.12/dist">NEXT</a>
 <div id="overlay"></div>
-<div id="note">Based on Excerpts from "A Short History of Nearly Everything" by Bill Bryson</div>
+<div id="note">Based on excerpts from "A Short History of Nearly Everything" by Bill Bryson</div>
 
 </html>
