--- a/prompts/jan.18/src/index.html
+++ b/prompts/jan.18/src/index.html
@@ -20,15 +20,15 @@
   <link href="../../../styles.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
   <script src="./main.js" async defer></script>
-  <title>jan.17 - GENUARY 2021</title>
+  <title>jan.18 - GENUARY 2021</title>
 </head>
 
 <body>
 </body>
 
-<span id="title">GENUARY 2021 - JAN.17</span>
-<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.16/dist">PREVIOUS</a>
-<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.18/dist">NEXT</a>
+<span id="title">GENUARY 2021 - JAN.18</span>
+<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.17/dist">PREVIOUS</a>
+<!-- <a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.x/dist">NEXT</a> -->
 <div id="overlay"></div>
 
 </html>
