Fix: Trigger build

--- a/prompts/jan.21/src/index.html
+++ b/prompts/jan.21/src/index.html
@@ -30,5 +30,6 @@
 <a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.20/dist">PREVIOUS</a>
 <!-- <a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.22/dist">NEXT</a> -->
 <div id="overlay"></div>
+<div id="note">test</div>
 
 </html>
