--- a/prompts/jan.21/src/index.html
+++ b/prompts/jan.21/src/index.html
@@ -28,7 +28,7 @@
 
 <span id="title">GENUARY 2021 - JAN.21</span>
 <a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.20/dist">PREVIOUS</a>
-<!-- <a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.22/dist">NEXT</a> -->
+<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.22/dist">NEXT</a>
 <div id="overlay"></div>
 
 </html>
