--- a/prompts/jan.25/src/index.html
+++ b/prompts/jan.25/src/index.html
@@ -20,17 +20,15 @@
   <link href="../../../styles.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
   <script src="./main.js" async defer></script>
-  <title>jan.24 - GENUARY 2021</title>
+  <title>jan.25 - GENUARY 2021</title>
 </head>
 
 <body>
 </body>
 
-<span id="title">GENUARY 2021 - JAN.24</span>
-<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.23/dist">PREVIOUS</a>
-<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.25/dist">NEXT</a>
+<span id="title">GENUARY 2021 - JAN.25</span>
+<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.24/dist">PREVIOUS</a>
+<!-- <a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.26/dist">NEXT</a> -->
 <div id="overlay"></div>
-<span id="note">Inspired by <a href="https://www.youtube.com/watch?v=kV8v2GKC8WA&ab_channel=WIRED" target="__blank">Daniel Rozin's "Angles Mirror"</a></span>
-
 
 </html>
