--- a/prompts/jan.28-29/src/index.html
+++ b/prompts/jan.28-29/src/index.html
@@ -20,15 +20,17 @@
   <link href="../../../styles.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
   <script src="./main.js" async defer></script>
-  <title>jan.27 - GENUARY 2021</title>
+  <title>jan.28-29 - GENUARY 2021</title>
+
+  <script src="../../../whammy.js"></script>
 </head>
 
 <body>
 </body>
 
-<span id="title">GENUARY 2021 - JAN.27</span>
-<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.26/dist">PREVIOUS</a>
-<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.28-29/dist">NEXT</a>
+<span id="title">GENUARY 2021 - JAN.28-29</span>
+<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.27/dist">PREVIOUS</a>
+<!-- <a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.30/dist">NEXT</a> -->
 <div id="overlay"></div>
 
 </html>
