--- a/prompts/jan.31/src/index.html
+++ b/prompts/jan.31/src/index.html
@@ -20,16 +20,14 @@
   <link href="../../../styles.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
   <script src="./main.js" async defer></script>
-  <title>jan.30 - GENUARY 2021</title>
+  <title>jan.31 - GENUARY 2021</title>
 </head>
 
 <body>
 </body>
 
-<span id="title">GENUARY 2021 - JAN.30</span>
-<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.28-29/dist">PREVIOUS</a>
-<a id="next" href="https://emericw.github.io/genuary2021/prompts/jan.31/dist">NEXT</a>
+<span id="title">GENUARY 2021 - JAN.31</span>
+<a id="previous" href="https://emericw.github.io/genuary2021/prompts/jan.30/dist">PREVIOUS</a>
 <div id="overlay"></div>
-<div id="note"></div>
 
 </html>
